# gigatoken-rb

./: .gitignore  .standard.yml  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  design_doc.md  gigatoken.gemspec  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml  (+3 more)
bench/: async_heartbeat.rb
benches/: encode.rs  encode_doc.rs  encode_st.rs  encode_st_sp.rs  pretokenize.rs  pretokenize_profile.rs  pretokenize_profile_all.rs
benchmarks/: results.json
examples/: bench_char_check.rs  bench_collision_check.rs  cache_memory.rs
exe/: gigatoken
ext/gigatoken/: Cargo.toml  extconf.rb
ext/gigatoken/src/: error.rs  gvl.rs  lib.rs  sentencepiece.rs  sources.rs  tokenizer.rs
gigatok/: __init__.py  _hf_compat.py  _tokenizer.py
gigatoken/: _cli.py
jeton/: __init__.py  _hf_compat.py  _tokenizer.py
lib/: gigatoken.rb
notebooks/: bit_patterns.py  data_view.py
profiling/: analyze.py  analyze.sh  pmu_summary.py  profile.sh  report.md
scripts/: build_release_cross_platform.py  profile-cpu.fish
spec/: gigatoken_spec.rb  spec_helper.rb
src/: batch.rs  bpe.rs  bpe_train.rs  lib.rs  main.rs  pretokenize.rs
tests/: bench_file_source.py  bench_train_encode.py  conftest.py  dclm_fixture.py  test_bpe_train.py  test_bpe_train_compare.py  test_encode.py  test_encode_dclm.py  test_encode_files.py  test_file_source.py  test_from_hf.py  test_from_tiktoken.py  test_hf_compat.py  test_load_hf.py  test_pretokenizer_iterator.py  test_sentencepiece.py  test_tokenizer_usage.py  test_use_with_tokenizers.py
toker/: __init__.py
(+78 files in other folders)
