[package]
name = "gigatoken-rb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
gigatoken = { path = "../..", default-features = false }
rayon = "1.11"
# Same version requirement and feature set magnus-0.8.2 already puts on its
# own rb-sys dependency (see magnus-0.8.2/Cargo.toml), so Cargo resolves both
# to the one rb-sys already in Cargo.lock rather than a second copy.
rb-sys = { version = ">=0.9.113", default-features = false, features = [
    "bindgen-rbimpls",
    "bindgen-deprecated-types",
    "stable-api",
] }
